# BT_VariantAnnotator

./: .coveragerc  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  LICENSE  Makefile  README.md  coverage.xml  env.yml  meta.yaml  requirements.txt  setup.cfg  setup.py
examples/: run_example_tcga_GA.py  run_example_tcga_HS.py
examples/data/TCGA_GA/: TCGA-A1-A0SB_db9d40fb-bfce-4c3b-a6c2-41c5c88982f1_a3254f8e-3bbd-42fc-abea-a5f25b7648b3.indel.capture.tcga.vcf  TCGA-A1-A0SB_db9d40fb-bfce-4c3b-a6c2-41c5c88982f1_a3254f8e-3bbd-42fc-abea-a5f25b7648b3.oxoG.snp.capture.tcga.vcf  vcf_meta.txt
examples/data/TCGA_HS/: genome.wustl.edu.TCGA-A1-A0SD.indel.0e81f9c986154ce89e59240c3f09534f.vcf  genome.wustl.edu.TCGA-A1-A0SD.snv.0e81f9c986154ce89e59240c3f09534f.vcf  genome.wustl.edu.TCGA-AR-A2LE.indel.97aa5e766ea447c79da152a341d09996.vcf  genome.wustl.edu.TCGA-AR-A2LE.snv.97aa5e766ea447c79da152a341d09996.vcf  vcf_meta.txt
reqs/: requirements.yml
src/: main.py  manual.py  util.py  vcf2maf.py  vep.py
src/htmlcov/: index.html  manual_py.html  status.json  tests_test_util_py.html  util_py.html
src/tests/: test_main.py  test_manual.py  test_util.py  test_vcf2maf.py  test_vep.py
src/variant_annotator/: _manual.py  _vcf2maf.py
src/variant_annotator/tests/: test_vep.py
varannot/: __init__.py  _main.py  _vcf2maf.py
varannot/tests/: test_manual.py
variant_annotator/: __init__.py  _main.py  _util.py  _vep.py
variant_annotator/tests/: test_main.py  test_util.py  test_vcf2maf.py
(+39 files in other folders)
