[metadata]
name = varannot
description = "Variant annotation with VEP and vcf2maf"
license = BSD 2-Clause License
version = 1.1
classifiers =
    Topic :: Scientific/Engineering :: Bio-Informatics
    Development Status :: 4 - Beta
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
packages = 
    varannot
install_requires = 
    numpy >= 1.14.0
    pandas >= 0.23.0
